# tb3_behaviors

./: README.md
tarea2/: CMakeLists.txt  package.xml
tarea2/action/: Angular.action  Linear.action
tarea2/launch/: locations.launch
tarea2/src/: client_angular.py  client_linear.py  go_angular.py  go_linear.py  go_locations.py  server_angular.py  server_linear.py
tb3_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
tb3_flexbe_behaviors/manifest/: algo.xml  example_behavior.xml  go_to_goal.xml  locations.xml  navigation.xml
tb3_flexbe_behaviors/src/tb3_flexbe_behaviors/: algo_sm.py  go_to_goal_sm.py  locations_sm.py  navigation_sm.py
tb3_flexbe_states/: CMakeLists.txt  package.xml  setup.py
tb3_flexbe_states/src/tb3_flexbe_states/: Go_angular.py  Go_lineal.py  Go_locations.py  Go_nav.py
