<?xml version="1.0"?>
<package format="2">
  <name>tarea2</name>
  <version>0.0.0</version>
  <description>The tarea2 package</description>

  <maintainer email="lopez.alexander@pucp.edu.pe">Alexander Lopez</maintainer>
  <license>BSD</license>
  <author email="lopez.alexander@pucp.edu.pe">Alexander Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
